fix: replace deprecated API usages
- Replace deprecated new URL() with URI.create().toURL() (S1874)
- Replace deprecated AccessLevel.MODULE with AccessLevel.PACKAGE (S1874)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>